namespacing discussion pagination to avoid affecting global styles

--- a/app/assets/stylesheets/application/modules/_discussion.scss
+++ b/app/assets/stylesheets/application/modules/_discussion.scss
@@ -41,6 +41,17 @@ $toolbar-filter-color: #808080;
     justify-content: center;
   }
 
+  .discussion-pagination .pagination li {
+    a, span {
+      background-color: lighten($brand-primary, 10%);
+    }
+    &:hover, &.active, &.active:hover {
+      a, span {
+        background-color: $brand-primary;
+      }
+    }
+  }
+
   .discussion-language-icon {
     float: right;
     margin-right: 10px;
